<resources>
    <string name="app_name">LookApp</string>
    <string name="auth_with_text">Авторизуйтесь при помощи</string>
    <string name="facebook_text">Facebook</string>
    <string name="google_text">Google</string>
    <string name="vk_text">Vkontakte</string>
    <string name="auth_with_phone">Или войдите\\зарегистрируйтесь с помощью\nномера телефона</string>

    <string name="facebook_app_id">749317965990383</string>

    <integer name="com_vk_sdk_AppId">7776470 </integer>
    <string name="auth_title">Авторизация</string>
    <string name="your_phone_text">Введите ваш номер телефона</string>
    <string name="enter">Вход</string>
    <string name="country_code">Код страны</string>
    <string name="empty_field_error">"Поле обязательно к заполнению "</string>
    <string name="wrong_phone_format">Введен неверный формат телефона</string>
    <string name="wrong_code_format">Введен неверный код из смс</string>
    <string name="chose">Выбрать</string>
    <string name="on_phone_number">На номер</string>
    <string name="was_send_code">был выслан код подтвеждения. Введите его, пожалуйста.</string>
    <string name="confirm">Подтвердить</string>
    <string name="send_again">Выслать повторно</string>
    <string name="left">осталось</string>
    <string name="seconds">секунд</string>
    <string name="registration">Регистрация</string>
    <string name="make_your_nickname_text">Придумайте ваш логин, который будут видеть другие пользователи</string>
    <string name="enter_your_nickname">Введите ваш логин</string>
    <string name="login">Логин</string>
    <string name="only_latin">Разрешены только символы латинских букв, цифры, тире и нижние подчеркивания.</string>
    <string name="next">Далее</string>
    <string name="login_is_taken">Этот логин уже занят</string>
    <string name="step_1_of_4">1 из 4 шаг</string>
    <string name="step_2_of_4">2 из 4 шаг</string>
    <string name="step_3_of_4">3 из 4 шаг</string>
    <string name="step_4_of_4">4 из 4 шаг</string>
    <string name="skip_text">Пропустить</string>
    <string name="set_your_sex">Укажите свой пол, чтобы мы подобрали для вас подходящие луки</string>
    <string name="male_sex">Мужской</string>
    <string name="female_sex">Женский</string>
    <string name="other">Другой</string>
    <string name="set_your_height">Укажите свой рост, чтобы мы подобрали для вас подходящие луки</string>
    <string name="set_your_weight">Укажите свой вес, чтобы мы подобрали для вас подходящие луки</string>
    <string name="set_your_waist">Укажите свои пропорции, чтобы мы подобрали для вас подходящие луки</string>
    <string name="waist_text">Талия</string>
    <string name="i_dont_know">я не знаю</string>
    <string name="chest_text">Грудь</string>
    <string name="hips_text">Бёдра</string>
    <string name="error_when_loadlin">Не удалось загрузить, повторить</string>
    <string name="no_image_loaded">Не удалось загрузить изображение</string>
    <string name="thousand">т.</string>
    <string name="millions">мл.</string>
    <string name="total">Total</string>
    <string name="ruble">₽</string>
    <string name="more">Больше</string>
    <string name="read_post">Читать статью</string>
    <string name="complain_text">Пожаловаться</string>
    <string name="share_post_text">Поделиться публикацией</string>
    <string name="copy_text">Скопировать ссылку</string>
    <string name="add_to_fav_text">Сохранить в избранное</string>
    <string name="link_is_copied">Ссылка скопирована</string>
    <string name="spam_text">Спам</string>
    <string name="incorrect_text">Некорректная информация</string>
    <string name="shock_content">Шокирующий контент</string>
    <string name="send_text">Вы уже отправляли жалобу  на данную публикацию</string>
    <string name="comments">Комментарии</string>
    <string name="comment_chosen">Выбран комментарий</string>
    <string name="look">Лук</string>
    <string name="post">Статья</string>
    <string name="new_post">Новая статья</string>
    <string name="new_post_header_hint">Заголовок статьи * \nне более 100 символов</string>
    <string name="new_post_phonto_hint">Фото превью статьи *</string>
    <string name="not_chosen">Не выбрано</string>
    <string name="insert_link_text">Вставьте ссылку</string>
    <string name="link">Ссылка</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="cant_send_query">Не удалось отправить запрос</string>
    <string name="youve_sent_claim">Не удалось отправить запрос</string>
    <string name="answer">Ответить</string>
    <string name="no_items">Похоже, закончились луки, обновить?</string>
    <string name="show_more">Показать еще</string>
    <string name="more_comments">комментария</string>
    <string name="delete_comment">Удалить комментарий</string>
    <string name="do_you_want_to_delet_comment">Вы действительно хотите удалть комментарий?</string>
    <string name="do_you_want_to_delete_photo">Если вы вернетесь назад, то все изменения будут удалены. Вы хотите продолжить?</string>
    <string name="yes">Да</string>
    <string name="gallary_text">Галерея</string>
    <string name="new_photo_text">Новое фото</string>
    <string name="new_look">Новый лук</string>
    <string name="filters_text">Фильтры</string>
    <string name="settings_text">Настройки</string>
    <string name="orientation">Ориентация</string>
    <string name="brightness">Яркость</string>
    <string name="contrast">Контраст</string>
    <string name="background">Фон</string>
    <string name="post_look">Запостить</string>
    <string name="mark_goods">Отметки вещей</string>
    <string name="location">Локация</string>
    <string name="show_all">Показать все</string>
    <string name="model">Модель</string>
    <string name="my_data_text">Мои данные</string>
    <string name="model_height_text">Рост модели</string>
    <string name="model_weight_text">Вес модели</string>
    <string name="figure_text">Фигура</string>
    <string name="style_text">Стиль</string>
    <string name="season_text">Сезон</string>
    <string name="cloth">Одежда</string>
    <string name="publish_also">Опубликовать также</string>
    <string name="instagram_text">Instagram</string>
    <string name="allow_comments_text">Разрешить комментарии</string>
    <string name="delete_from_favorite">Убрать из избранного</string>
</resources>