<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationStepFourFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_minus25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".fragments.RegistrationStepFourFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_minus25sdp"
            android:layout_marginEnd="@dimen/_minus25sdp"
            app:cardCornerRadius="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="@dimen/_5sdp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:navigationIcon="@drawable/navigation_back_drawable">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registration"
                    android:textAppearance="@style/HeaderText"
                    tools:layout_editor_absoluteX="163dp"
                    tools:layout_editor_absoluteY="18dp" />

                <TextView
                    android:id="@+id/skip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:text="@string/skip_text"
                    android:textAppearance="@style/BodyText11"
                    android:textColor="@color/pink_pressed"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/toolbar" />
            </androidx.appcompat.widget.Toolbar>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/step_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/step_4_of_4"
            android:textAppearance="@style/BodyText11"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/set_your_waist_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/set_your_waist"
            android:textAppearance="@style/BodyText16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_two"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/reg_one"
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_reg_rect_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/step_text"
            app:layout_constraintTop_toBottomOf="@+id/step_text"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/waist_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/waist_text"
            android:textAppearance="@style/BodyText13"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_your_waist_text"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/hips_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/hips_text"
            android:textAppearance="@style/BodyText13"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/hips_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/hips_picker"
            app:layout_constraintTop_toBottomOf="@+id/set_your_waist_text"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/chest_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/chest_text"
            android:textAppearance="@style/BodyText13"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/chest_picker"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/chest_picker"
            app:layout_constraintTop_toBottomOf="@+id/set_your_waist_text"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/i_dont_know_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/i_dont_know"
            android:textAppearance="@style/BodyText11"
            android:textColor="@color/pink_pressed"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_your_waist_text"
            app:layout_constraintVertical_bias="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:src="@drawable/picker_sel_bg"
            app:layout_constraintBottom_toBottomOf="@id/waist_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/waist_picker" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:src="@drawable/picker_sel_bg"
            app:layout_constraintBottom_toBottomOf="@id/waist_picker"
            app:layout_constraintEnd_toEndOf="@+id/set_your_waist_text"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/waist_picker" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:src="@drawable/picker_sel_bg"
            app:layout_constraintBottom_toBottomOf="@id/chest_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/set_your_waist_text"
            app:layout_constraintTop_toTopOf="@id/chest_picker" />

        <ImageView
            android:id="@+id/reg_two"
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_reg_rect_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/reg_one"
            app:layout_constraintTop_toBottomOf="@+id/step_text"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/reg_three"
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_reg_rect_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reg_four"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/step_text"
            app:layout_constraintVertical_bias="0" />

        <ImageView
            android:id="@+id/reg_four"
            android:layout_width="@dimen/_66sdp"
            android:layout_height="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/ic_reg_rect_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/step_text"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/step_text"
            app:layout_constraintVertical_bias="0" />

        <com.super_rabbit.wheel_picker.WheelPicker
            android:id="@+id/waist_picker"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_your_waist_text"
            app:layout_constraintVertical_bias="0.5"
            app:max="300"
            app:min="0"
            app:selectedTextColor="@color/black_100"
            app:textColor="@color/black_40"
            app:textSize="@dimen/_18sdp"
            app:wheelItemCount="5"
            app:wrapSelectorWheel="true" />

        <com.super_rabbit.wheel_picker.WheelPicker
            android:id="@+id/hips_picker"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@id/set_your_waist_text"
            app:layout_constraintVertical_bias="0.5"
            app:max="300"
            app:min="0"
            app:selectedTextColor="@color/black_100"
            app:textColor="@color/black_40"
            app:textSize="@dimen/_18sdp"
            app:wheelItemCount="5"
            app:wrapSelectorWheel="true" />

        <com.super_rabbit.wheel_picker.WheelPicker
            android:id="@+id/chest_picker"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_240sdp"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@id/set_your_waist_text"
            app:layout_constraintVertical_bias="0.5"
            app:max="300"
            app:min="0"
            app:selectedTextColor="@color/black_100"
            app:textColor="@color/black_40"
            app:textSize="@dimen/_18sdp"
            app:wheelItemCount="5"
            app:wrapSelectorWheel="true" />

        <Button
            android:id="@+id/next"
            style="@style/PinkButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTintMode="add"
            android:enabled="true"
            android:text="@string/next"
            app:backgroundTint="@android:color/transparent"
            app:backgroundTintMode="add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>